Plugin Name: MarketPress
Author: Aaron Edwards (incsub)

Change Log:
----------------------------------------------------------------------
----------------------------------------------------------------------

2.9.4 - 4/16/2014
----------------------------------------------------------------------
- Fixed: grid view doesn't work when displaying global product list
- Fixed: products on are not added to cart when using buy now button on single product page
- Fixed: product categories not properly assigning when using global marketplace http://wp.mu/970
- Added: Bitpay Bitcoin gateway (alpha)

2.9.3.9 - 4/12/2014
----------------------------------------------------------------------
- Fixed: incorrect URL in Simplify gateway settings
- Fixed: incorrect URL in Authorize.net gateway settings
- Fixed: when logged in, order status links are incorrect
- Fixed: when using Authorize.net in sandbox mode API calls are being made in test mode
- Fixed: when completing checkout, in-stock items some times show as out of stock (when using variations)
- Fixed: when quickly adding multiple items to cart not all of the items get added http://wp.mu/96f

2.9.3.8 - 4/5/2014 - Jonathan Cowher 
----------------------------------------------------------------------
- Fixed: prices not showing up after 2.9.3.7 release

2.9.3.7 - 4/5/2014 - Jonathan Cowher 
----------------------------------------------------------------------
- Fixed: deprecated use of the $wpdb->escape() function
- Fixed: wrong link in PayPal Express settings
- Fixed: subtotal text appending for each item
- Fixed: coupons incorrectly apply to uncategorized items when using category-based coupons
- Fixed: coupon stays applied to cart after removing applicable products from cart
- Added: support for Google rich snippets NOTE: PLEASE CHECK YOUR PRODUCT PAGES AFTER UPDATING AS SOME ADDITIONAL TAGS HAVE BEEN ADDED
- Deprecated: mp_product_price_tag filter - use mp_product_price_html instead
